k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: landlord
  labels:
    name: landlord-kingdom
