k8s/fe-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
  namespace: landlord
  labels:
    app: react-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: react-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
  namespace: landlord
  labels:
    app: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
        - name: react-frontend
          image: landlordkingdom-fe:1.0.0
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              name: nginx-config
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
