k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: landlord
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tua202402.pl
      secretName: landlord-tls
  rules:
    - host: tua202402.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-service
                port:
                  number: 80
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: application
                port:
                  number: 8080
